syntax = "proto3";
package sec.bftb.grpc;


message Movement {
	int32 movementID = 1;
	float amount = 2;
	string status = 3;
	bytes movementSignature = 4;
	bytes signatureKey = 5;
	string directionOfTransfer = 6;
}

message PingRequest {
}
	
message PingResponse {
	string outputText = 1;
}


message openAccountRequest{
	bytes publicKeyClient = 1;
	bytes registerSignature = 2;
	int32 sequenceNumber = 3;
	bytes hashMessage = 4;
}

message openAccountResponse{
	float balance = 1; 
	int32 sequenceNumber = 2;
	bytes hashMessage = 3;
}

message sendAmountRequest{
	bytes publicKeySender = 1;
	bytes publicKeyReceiver = 2;
	float amount = 3;
	int32 transferId = 4;
	bytes movementSignature = 5;
	float newBalance = 6;
	int32 registerSequenceNumber = 7;
	bytes registerSignature = 8;
	int32 sequenceNumber = 9;
	bytes hashMessage = 10;
	bool isValidated = 11;
}

message sendAmountResponse{
	int32 transferId = 1;
	float newBalance = 2;
	float oldBalance = 3;
	int32 registerSequenceNumber = 4;
	bytes registerSignature = 5;
	int32 sequenceNumber = 6;
	bytes hashMessage = 7; 
}

message checkAccountRequest{
	bytes publicKeyClient = 1;
	int32 sequenceNumber = 2;
}

message checkAccountResponse{
	repeated Movement pendingMovements = 1;
	float balance = 2;
	int32 registerSequenceNumber = 3;
	bytes registerSignature = 4;
	int32 sequenceNumber = 5;
	bytes hashMessage = 6;
}

message checkMovementRequest{
	bytes publicKeyClient = 1;
	int32 numberMovement = 2;
	int32 sequenceNumber = 3;
	bytes hashMessage = 4;
}

message checkMovementResponse{
	int32 id = 1;
    bytes originAcc = 2;
    bytes destAcc = 3;
    float amount = 4;
    string state = 5;
	int32 sequenceNumber = 6;
	bytes hashMessage = 7;
}

message receiveAmountRequest{
	bytes publicKeyClient = 1;
	int32 movementId = 2;
	int32 sequenceNumber = 3;
	bytes hashMessage = 4;
}

message receiveAmountResponse{
	int32 sequenceNumber = 1;
	bytes hashMessage = 2;
}

message auditRequest{
	bytes publicKeyClient = 1;
	int32 sequenceNumber = 2;
}

message auditResponse{
	repeated Movement confirmedMovements = 1;
	int32 sequenceNumber = 2;
	bytes hashMessage = 3;
}

message highestRegisterSequenceNumberRequest{
	bytes publicKeyClient = 1;
	int32 sequenceNumber = 2;
	bytes hashMessage = 3;
}

message highestRegisterSequenceNumberResponse{
	float balance = 1;
	int32 registerSequenceNumber = 2;
	bytes registerSignature = 3;
	int32 sequenceNumber = 4;
	bytes hashMessage = 5;
}


service BFTBanking {
	rpc Ping(PingRequest) returns (PingResponse);
	rpc openAccount(openAccountRequest) returns (openAccountResponse);
	rpc sendAmount(sendAmountRequest) returns (sendAmountResponse);
	rpc checkAccount(checkAccountRequest) returns (checkAccountResponse);
	rpc checkMovement(checkMovementRequest) returns (checkMovementResponse);
	rpc receiveAmount(receiveAmountRequest) returns (receiveAmountResponse);
	rpc audit(auditRequest) returns (auditResponse);
	rpc getHighestRegisterSequenceNumber (highestRegisterSequenceNumberRequest) returns (highestRegisterSequenceNumberResponse);
}